test-cases/valid/reject/missing_return.ul
void main() {

}

int foo() {
    println "I forgot to return a value";
}